--- a/scripts/style.css
+++ b/scripts/style.css
@@ -7,28 +7,24 @@
 body {
     font-family: Open Sans, Arial;
     font-weight: normal;
-    width: 240px;
+    width: 220px;
     max-height: 350px;
     color: #515151;
     font-size: 12px;
 }
 
 #top{
-
-    width: 240px;;
-    display:flex;
-    flex-direction: row;
+    display: flex;
     align-items: center;
-    justify-content: center;
-    background-color:#a5a5a5;
-    border-bottom: 2px solid #515151;
-    border-top: 1px solid #919191;
-    
+    background-color:#F5F5F5;
+    border-bottom: 2px solid #6161612f;
+    border-top: 1px solid #6161612f;
 }
 
-#topimg {
+
+#top img {
     padding: 5px;
-    margin-left: auto;
+    margin-left: 10px;
 }
 
 
@@ -38,28 +34,29 @@ h1 {
 }
 
 #totalEmails {
-    margin-right: auto;
-    text-align: center;
+    text-align: left;
+    margin: 0;
 }
 
 
 
 #emailList {
-    height: 200px;
+    height: 220px;
     overflow-y: auto;
     word-wrap: break-word;
-    border: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     padding: 5px;
 }
 
 .btn {
-    border-top: 2px solid #515151;
     padding: 4px 8px;
-    background-color: #a5a5a5;
     display:flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
+    background-color:#F5F5F5;
+    border-bottom: 2px solid #6161612f;
+    border-top: 1px solid #6161612f;
 }
 
 button {
@@ -71,7 +68,7 @@ button {
 
 /* CSS */
 .button-3 {
-    background-color: #7c7c7c;
+    background-color: #f5f5f5;
     border: 1px solid rgba(27, 31, 35, 0.15);
     border-radius: 3px;
     box-sizing: border-box;
